<resources>
    <string name="app_name">LetsConnect</string>
    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="group">Groups</string>
    <string name="random">ChatGPT</string>
    <string name="nav_header_title">Harshit</string>
    <string name="nav_header_subtitle">imailharshit@gmail.com</string>
    <string name="otp1">We will send you OTP</string>
    <string name="otp2">(ONE TIME VERIFICATION)</string>
    <string name="otp3">on this number.</string>
    <string name="logout">Log Out</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="link">https://www.google.com/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>