<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menuhome"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_person"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/group_photo"
            android:title="@string/group" />

        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/random_icon"
            android:title="@string/random" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/logout"/>

        <item
            android:title="@string/invite_friends"
            android:id="@+id/nav_invite"
            android:icon="@drawable/invite_add"
            />

    </group>


</menu>