<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/welcome_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/registration_welcome_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hbb20.CountryCodePicker
            android:layout_width="74dp"
            android:layout_height="61dp"
            android:id="@+id/countryCodeHolder"
            android:padding="13dp"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:layout_constraintBottom_toTopOf="@+id/linear"
            app:layout_constraintEnd_toStartOf="@+id/number"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/baseline_add_call_24"
            android:drawablePadding="13dp"
            android:elevation="3dp"
            android:hint="Please Enter Your Number"
            android:inputType="number"
            android:padding="13dp"
            android:textColor="#888887"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_img"
            app:layout_constraintVertical_bias="0.046"
            app:layout_constraintWidth_percent=".8" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otp1"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otp2"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/otp3"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generateBTN"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/blue"
            android:padding="14dp"
            android:text="Generate OTP"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".5"
            android:scaleY=".5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generateBTN"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/resendTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="Resend OTP"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/otpET"
            app:layout_constraintStart_toStartOf="@+id/otpET"
            app:layout_constraintTop_toBottomOf="@+id/otpET" />

        <EditText
            android:id="@+id/otpET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="13dp"
            android:elevation="3dp"
            android:hint="Please Enter OTP here"
            android:inputType="number"
            android:padding="13dp"
            android:textColor="#888887"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generateBTN"
            app:layout_constraintVertical_bias="0.069"
            app:layout_constraintWidth_percent=".8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBTN"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@color/blue"
            android:padding="14dp"
            android:text="Verify OTP"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resendTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
